--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.11",
+    "@vitejs/plugin-vue": "^5.0.4",
     "axios": "^1.7.2",
     "jose": "^5.6.2",
     "jsonwebtoken": "^9.0.2",
     "qs": "^6.12.1",
+    "quasar": "^2.16.4",
+    "vite": "^5.2.0",
     "vue": "^3.4.21",
     "vue-auth": "^1.0.0-alpha.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.77.6",
     "vite": "^5.2.0"
   }
 }
