--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "qs": "^6.12.1",
     "quasar": "^2.16.4",
+    "uuid": "^10.0.0",
     "vite": "^5.2.0",
     "vue": "^3.4.21",
     "vue-auth": "^1.0.0-alpha.1",
