--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.77.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.20.1"
   }
 }
