--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "My App",
-    "short_name": "App",
+    "name": "Event Manager",
+    "short_name": "Event Manager",
     "description": "My Progressive Web App",
     "start_url": "/",
     "display": "standalone",
